# SortingVisualizer

./: Algorithm.cpp  CMakeLists.txt  Data.cpp  Data.h  README.md  StatusBar.cpp  StatusBar.h  Viewer.cpp  main.cpp
include/: Algorithm.h  StatusBar.h  Viewer.h
src/: Algorithm.cpp  Data.cpp  StatusBar.cpp  Viewer.cpp  main.cpp
